# OldCProjects

./: README.md
audaciousxchat/: Makefile  main.c
beach/: Makefile  font.cpp  font.hpp  locator.cpp  locator.hpp  main.cpp  main_desktop.cpp  main_desktop.hpp
chip8/: .gitignore  Makefile  chip8  fake_gfx.c  fake_input.c  gfx.c  gfx.h  input.c  input.h  main.c  ops.c  ops.h  sound.c  sound.h  test.c
etchasketch/: Makefile  main.c
fbf/: Makefile  main.c
feeshtris/: Makefile  block.cpp  block.hpp  bubble.cpp  game.cpp  game.hpp  main.cpp  menu.cpp  menu.hpp  menusel.cpp  menusel.hpp  piece.cpp  piece.hpp
ffile/: Makefile  (+5 more)
tnlpad/client/: Makefile  Makefile.am  Makefile.in  README  about_diag.c  about_diag.h  autogen.sh  banner.c  chan_diag.c  chat.c  client.c  client.h  client_info.c  client_info.h  colour_diag.h  colour_widget.c  con_diag.c  config.status  config.status.lineno  configure  configure.ac  configure.lineno  draw.c  draw.h  globals.c  globals.h  image_dump.c  main.c  main_window.c  main_window.h  netspec.txt  network.c  network.h  nick_diag.c  nick_diag.h  non.rc  preferences.c  preferences.h  resources.h  string_ops.c  (+7 more)
tnlpad/client/.deps/: about_diag.Po  banner.Po  chan_diag.Po  chat.Po  client.Po  client_info.Po  colour_diag.Po  colour_widget.Po  con_diag.Po  draw.Po  error.Po  globals.Po  grid_diag.Po  image_dump.Po  main.Po  main_window.Po  network.Po  nick_diag.Po  nlconfig.Po  preferences.Po  resources.Po  string_ops.Po  tnlconfig.Po  toolbar.Po  zoom_widget.Po
tnlpad/client/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
(+807 files in other folders)
