AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip foreign

bin_PROGRAMS = tnlpad

AM_CFLAGS = $(DEP_CFLAGS)
tnlpad_LDADD = $(DEP_LIBS)

EXTRA_DIST =			\
	README			\
	autogen.sh		\
	pixbufs/about.png	\
	pixbufs/banner.png	\
	pixbufs/brush.png	\
	pixbufs/bucket.png	\
	pixbufs/chan.png	\
	pixbufs/clear.png	\
	pixbufs/col.png		\
	pixbufs/conn.png	\
	pixbufs/disconn.png	\
	pixbufs/dump.png	\
	pixbufs/eraser.png	\
	pixbufs/grid.png	\
	pixbufs/id.png		\
	pixbufs/line.png	\
	pixbufs/rect.png	\
	pixbufs/sicona.png	\
	pixbufs/sicon.png

tnlpad_SOURCES =		\
	about_diag.c	\
	about_diag.h	\
	banner.c	\
	banner.h	\
	chan_diag.c	\
	chan_diag.h	\
	chat.c		\
	chat.h		\
	client.c	\
	client.h	\
	colour_diag.c	\
	colour_diag.h	\
	colour_widget.c	\
	colour_widget.h	\
	zoom_widget.c	\
	zoom_widget.h	\
	con_diag.c	\
	con_diag.h	\
	preferences.c	\
	preferences.h	\
	tnlconfig.c	\
	tnlconfig.h	\
	draw.c		\
	draw.h		\
	error.c		\
	error.h		\
	globals.c	\
	globals.h	\
	grid_diag.c	\
	grid_diag.h	\
	image_dump.c	\
	image_dump.h	\
	main.c		\
	main_window.c	\
	main_window.h	\
	network.c	\
	network.h	\
	nick_diag.c	\
	nick_diag.h	\
	resources.c	\
	resources.h	\
	string_ops.c	\
	string_ops.h	\
	toolbar.c	\
	toolbar.h	\
	client_info.c	\
	client_info.h
